--- a/css/main.css
+++ b/css/main.css
@@ -271,15 +271,13 @@ button:focus,
     float: right;
     font-family: 'Poppin', serif;
     display: block;
-    position: absolute;
-    text-transform: uppercase;
-    font-size: 24px;
+    position: fixed;
+ 
+    font-size: 18px;
     letter-spacing: 7px;
-    margin-top: 42px;
-    color: white ;
+    margin-top: 22px;
+    color: #222222;
     background-color: white;
-    padding-left: 6.5vw;
-    
 }
 
 
@@ -287,25 +285,24 @@ button:focus,
 
 .menu {
     transition: all 0.40s ease-out;
-    width: 60px;
-    height: 30px;
+    width: 70px;
+    height: 100px;
     cursor: pointer;
-    position: absolute;
-    right: 0;
-    top: 0;
+    position: fixed;
+    left: 40px;
+    top: 50px;
     z-index: 5;
     border-radius: 100%;
 }
 
 .nav-icon p {
-    position: absolute;
-    right: 0;
-    top: 0;
+    position: fixed;
+    left: 5px;
+    top: 3px;
     background-image: url(../images/nav.png);
     background-repeat: no-repeat;
     background-position: 0 7px;
-    padding-left: 11px;
-
+    padding-left: 53px
 }
 
 .over {
