--- a/css/main.css
+++ b/css/main.css
@@ -271,9 +271,9 @@ button:focus,
     float: right;
     font-family: 'Poppin', serif;
     display: block;
-    position: fixed;
- 
-    font-size: 18px;
+    position: relative;
+    /*text-transform: uppercase;*/
+    font-size: 14px;
     letter-spacing: 7px;
     margin-top: 22px;
     color: #222222;
@@ -285,24 +285,24 @@ button:focus,
 
 .menu {
     transition: all 0.40s ease-out;
-    width: 70px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
     position: fixed;
-    left: 40px;
-    top: 50px;
+    right: 90%;
+    top: 0;
     z-index: 5;
     border-radius: 100%;
 }
 
 .nav-icon p {
     position: fixed;
-    left: 5px;
-    top: 3px;
+    right: 93%;
+    top: 0;
     background-image: url(../images/nav.png);
     background-repeat: no-repeat;
     background-position: 0 7px;
-    padding-left: 53px
+    padding-left: 11px
 }
 
 .over {
