--- a/css/main.css
+++ b/css/main.css
@@ -271,11 +271,11 @@ button:focus,
     float: right;
     font-family: 'Poppin', serif;
     display: block;
-    position: relative;
+    position: fixed;
     /*text-transform: uppercase;*/
-    font-size: 14px;
+    font-size: 40px;
     letter-spacing: 7px;
-    margin-top: 22px;
+    margin-top: 52px;
     color: #222222;
     background-color: white;
 }
@@ -285,20 +285,20 @@ button:focus,
 
 .menu {
     transition: all 0.40s ease-out;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 30px;
     cursor: pointer;
     position: fixed;
-    right: 90%;
-    top: 0;
+    right: 51%;
+    top: 20px;
     z-index: 5;
     border-radius: 100%;
 }
 
 .nav-icon p {
     position: fixed;
-    right: 93%;
-    top: 0;
+    right: 50%;
+    top: 20px;
     background-image: url(../images/nav.png);
     background-repeat: no-repeat;
     background-position: 0 7px;
