--- a/css/main.css
+++ b/css/main.css
@@ -268,14 +268,14 @@ button:focus,
 }
 
 .nav-icon {
-    float: right;
+    float: left;
     font-family: 'Poppin', serif;
     display: block;
-    position: fixed;
+    position: relative;
     /*text-transform: uppercase;*/
-    font-size: 40px;
-    letter-spacing: 7px;
-    margin-top: 52px;
+    font-size: 20px;
+    letter-spacing: 14px;
+    margin-top: 12px;
     color: #222222;
     background-color: white;
 }
@@ -288,21 +288,21 @@ button:focus,
     width: 70px;
     height: 30px;
     cursor: pointer;
-    position: fixed;
-    right: 51%;
-    top: 20px;
+    position: relative;
+    left: 0;
+    top: 0;
     z-index: 5;
     border-radius: 100%;
 }
 
 .nav-icon p {
-    position: fixed;
-    right: 50%;
-    top: 20px;
+    position: absolute;
+    left: 0;
+    top: 0;
     background-image: url(../images/nav.png);
     background-repeat: no-repeat;
     background-position: 0 7px;
-    padding-left: 11px
+    padding-left: 14px
 }
 
 .over {
