--- a/css/main.css
+++ b/css/main.css
@@ -247,6 +247,7 @@ button:focus,
 
 .main-menu {
     background-color: white;
+    font-family: 'Poppins', serif;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -403,6 +404,7 @@ button:focus,
     visibility: hidden;
     text-align: center;
     opacity: 0;
+    font-family: 'Poppins', serif;
     transition: all 0.300s;
     transition-delay: 0s;
 }
@@ -422,6 +424,7 @@ button:focus,
     list-style-type: none;
     text-align: center;
     margin: 0;
+    font-family: 'Poppins', serif;
     padding: 0;
 }
 
@@ -454,6 +457,7 @@ button:focus,
     width: 0;
     height: 1px;
     background: #222222;
+    font-family: 'Poppins', serif;
     z-index: 2;
     transition: width 0.3s;
     z-index: 1
@@ -472,7 +476,8 @@ button:focus,
     color: #222222;
     position: relative;
     z-index: 2;
-    display: block
+    display: block;
+    font-family: 'Poppins', serif;
 }
 
 
