--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,8 @@ button:focus,
     letter-spacing: 6px;
     font-family: 'Poppins';
     line-height: 1.5;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .mail-to {
