--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,7 @@ button:focus,
 /*menu e icono*/
 
 .menu {
+    transition: all 0.40s ease-out;
     width: 70px;
     height: 30px;
     cursor: pointer;
